--- a/docs/overview/master06-conceptual_architecture.adoc
+++ b/docs/overview/master06-conceptual_architecture.adoc
@@ -58,7 +58,7 @@ DLMs are written in the {openehr_decision_language}[openEHR Decision Language (D
 * _rule-sets_: collections of rules that operate on a common set of input variables to generate a common set of output values; may be represented as 2-dimensional _decision tables_;
 * _output variables_: intermediate rule results that may be inspected by calling components.
 
-Conditions, rules, rule-sets and other inference-generating structures that may include them constitute fragments of knowledge that need to be able to be authored and change-managed independently from contexts that use them, rather than being directly written into (say) if/then/else logic chains as a programmer would typically do. This specification accordingly provides a representational form for such logic, along with artefacts that connect them to data access services (e.g. EHR) and also enable them to be invoked by user contexts (e.g. workflow engines).
+Conditions, rules, rule-sets and other inference-generating structures that may include them constitute fragments of knowledge that need to be able to be authored and change-managed independently from contexts that use them, rather than being directly written into (say) if/then/else logic chains as a programmer would typically do. This specification accordingly provides a representational form for such logic, along with mechanisms that connect them to data access services (e.g. EHR) and also enable them to be invoked by user contexts (e.g. workflow engines).
 
 An extract from the DLM corresponding for the RCHOPS chemotherapy plan shown above is as follows ({openehr_process_examples}#_rchops21_decision_logic_module[full version^])
 
@@ -95,7 +95,6 @@ reference
 input -- State
 
     has_lymphoma_diagnosis: Boolean
-        time_window = tw_current_episode
 
 input -- Tracked state
 
